src/index.css
@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
@import url("https://fonts.googleapis.com/css?family=Titillium+Web&display=swap");

:root {
  --main-color: rgba(49, 71, 158, 1);
  --secondary-color: rgba(237, 28, 36, 1);
  --light-color: rgba(237, 233, 233, 1);
}

.color-main {
  color: var(--main-color);
}
.color-secondary {
  color: var(--secondary-color);
}
.color-light {
  color: var(--light-color);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Lato", sans-serif;
}

/* UTILITIES */

a {
  text-decoration: none;
  color: unset;
}

.btn {
  border-radius: 10px;
  cursor: pointer;
  opacity: 0.95;
  transition: all 0.1s ease-in-out;
}

.btn:hover {
  opacity: 1;
  box-shadow: 0px 0px 25px 0px rgba(255, 255, 255, 1);
}

.btn:active {
  transform: scale(0.95);
}

.btn-big {
  width: 200px;
  height: 70px;
  font-size: 1.1rem;
}

.btn-light {
  background-color: #fff;
  border: none;
  padding: 12px;
  font-weight: bold;
  color: var(--main-color);
}
.btn-outline-light {
  background: none;
  border: 3px solid #fff;
  padding: 12px;
  font-weight: bold;
  color: #fff;
}

.section-header {
  text-align: center;
  font-size: 2.5rem;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  padding: 2rem 0 2rem;
}

.hidden {
  display: none;
}

/* HEADER */

header {
  top: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: fixed;
  width: 100%;
  z-index: 3;
  transition: all 0.5s ease;
}

.header-nav {
  height: 50px;
  background: rgb(49, 71, 158);
  box-shadow: 0px 2px 25px 0px var(--light-color);
}

.site-logo img {
  max-width: 150px;
  transition: all 0.3s ease;
}

.logo-sm {
  transform: scale(0.6);
  margin-left: -1.7rem;
  margin-top: 0.7rem;
}

.navbar .nav-list {
  list-style: none;
  text-transform: uppercase;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-right: 2rem;
  color: #fff;
  transition: all 0.3s ease;
  z-index: 2;
  position: relative;
}

.navbar .nav-list .nav-list-item {
  padding: 0.5rem;
  transition: all 0.3s ease;
}

.navbar .nav-list .nav-list-item a {
  transition: all 0.1s ease-in-out;
}

.navbar .nav-list .nav-list-item a:hover {
  font-weight: bold;
  text-shadow: 0px 0px 25px rgba(237, 233, 233, 1);
}

/* MAIN */

.main-section {
  height: 100vh;
  width: 100%;
  background: url("/src/assets/img/imgpsh_fullsize_anim.jpg");
  background-position: center;
  background-repeat: no-repeat;
}

.main-section .overlay {
  width: 100%;
  height: 100%;
  background-color: rgba(49, 71, 158, 0.9);
  color: var(--light-color);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
}

.main-section .overlay h2 {
  font-style: italic;
  font-size: 1.7rem;
}

.main-section .overlay .main-title {
  font-size: 4rem;
  margin-top: 6rem;
}

.main-section .overlay .main-title-sm {
  font-style: normal;
  font-size: 2.6rem;
  margin-top: 1rem;
}

.main-section .overlay .buttons {
  margin-top: 6rem;
  width: 50%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.main-section .overlay .countdown {
  height: 100px;
  width: 65%;
  background: var(--secondary-color);
  position: absolute;
  bottom: -30px;
  box-shadow: 0px 0px 25px 0px rgba(255, 255, 255, 1);
  z-index: 2;
  border-radius: 10px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  text-align: center;
  font-size: 3rem;
  font-family: "Titillium Web", sans-serif;
}

.main-section .overlay .countdown .cd-item p {
  font-size: 1rem;
}

/* ABOUT */

.about {
  width: 100%;
  min-height: 100vh;
  background: url("/src/assets/img/workshop.jpg") center/cover no-repeat;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.about .overlay-light {
  position: absolute;
  background: rgba(237, 233, 233, 0.3);
  width: 100%;
  height: 100%;
  z-index: 0;
}

.about .overlay-sm {
  width: 90%;
  height: 90vh;
  background: rgba(49, 71, 158, 0.8);
  box-shadow: 0px 0px 50px 0px rgba(49, 71, 158, 1);
  border-radius: 24px;
  padding: 0.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
  color: #fff;
}

.about .overlay-sm .text {
  width: 50%;
  padding: 1.5rem;
  font-size: 15px;
}

.about .overlay-sm .text p {
  margin-bottom: 1rem;
  line-height: 1.2rem;
}

/* TOPICS */

.topics {
  min-height: 100vh;
  background: var(--light-color);
  display: flex;
  align-items: center;
  justify-content: baseline;
  flex-direction: column;
}

.topics .topics-wrapper {
  width: 80%;
  height: 100%;
  margin-top: 1.2rem;
}

.topics .topics-wrapper .topic {
  position: relative;
  height: 120px;
}

.topics .topics-wrapper .topic img {
  position: absolute;
  transform: scale(0.8);
  top: -50px;
}

.topics .topics-wrapper .topic:nth-child(1) img,
.topics .topics-wrapper .topic:nth-child(3) img,
.topics .topics-wrapper .topic:nth-child(5) img,
.topics .topics-wrapper .topic:nth-child(7) img {
  left: 0;
}

.topics .topics-wrapper .topic:nth-child(2) img,
.topics .topics-wrapper .topic:nth-child(4) img,
.topics .topics-wrapper .topic:nth-child(6) img {
  right: 0;
}

/* INFO-BAR */

.info-bar {
  background: var(--main-color);
  display: flex;
  color: var(--light-color);
  padding: 3rem;
  justify-content: space-around;
  align-items: center;
}

.info-bar .info-item {
  text-align: center;
}

.info-bar .info-item p {
  font-size: 1.1rem;
}

.info-bar .info-item p:first-of-type {
  padding-top: 1.5rem;
}

/* REGISTRATION */

.registration {
  background: var(--light-color);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.registration .paragraph {
  width: 80%;
  padding: 1.5rem;
}

.registration .paragraph p {
  font-size: 24px;
}

.registration .deadlines {
  width: 70%;
  display: flex;
  justify-content: space-around;
  align-items: center;
  text-align: center;
  margin: 3rem 0;
}
/* ... */

